--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,10 @@ a:visited {
 	color: #6d6df9;
 }
 
+#menu {
+	
+}
+
 .menuBtn {
 	text-align: right;
 	color: #085191;
@@ -92,7 +96,7 @@ a:visited {
 	font-size: 30px;
 	padding: 10px 20px;
 	height: auto;
-	width: 230px;
+	width: 250px;
 	border: 1px solid #085191;
 	border-radius: 0px 20px 20px 0px;
 	box-shadow: 1px 4px 10px #085191;
@@ -148,6 +152,18 @@ footer {
 	color: #2693a0;
 	text-shadow: 1px 1px 1px #085191;
 }
+
+#belowHeader h2 {
+	font-size: 25px;
+	color: #2693a0;
+	margin: 30px 0px;
+}
+
+.projectList li {
+	margin: 10px 0px 10px 50px;
+}
+
+
 
 #mainContent {
 	position: absolute;
