--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-	/* remove all blank space in a browser compatible way*/
+	/* remove all blank space in a browser compatible way. taken from a stack overflow answer*/
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -20,7 +20,8 @@ body, input, textarea {
 #gladys-pic {
 	border: 2px solid #085191;
 	box-shadow: 1px 3px 5px #085191;
-	margin-right: 70px;
+	margin-right: 4em;
+	margin-bottom: 4em;
 }
 
 #contact-links-list {
@@ -83,7 +84,8 @@ a:visited {
 }
 
 #menu {
-	
+	width: 25%;
+	float: left;
 }
 
 .menuBtn {
@@ -93,10 +95,9 @@ a:visited {
 	display: block;
 	position: relative;
 	background-color: #fff;
-	font-size: 30px;
+	font-size: 2em;
+	width: 67%;
 	padding: 10px 20px;
-	height: auto;
-	width: 250px;
 	border: 1px solid #085191;
 	border-radius: 0px 20px 20px 0px;
 	box-shadow: 1px 4px 10px #085191;
@@ -105,7 +106,7 @@ a:visited {
 #header-decoration {
 	position: absolute;
 	bottom: 0;
-	font-size: 20px;
+	font-size: 1.2em;
 	color: #085191;
 	background-color: #fff;
 	width: 100%;
@@ -119,7 +120,7 @@ a:visited {
 	background-color: #fff; */
 	background-color: #42bbc9;
 	color: #fff;
-	font-size: 70px;
+	font-size: 4.5em;
 	padding: 25px 25px;
 	text-align: left;
 	/* border: 1px solid #085191;
@@ -143,18 +144,20 @@ footer {
 
 #belowHeader {
 	border: 0px;
-	margin: 50px 20px 50px 0px;
+	width: 100%;
+	height: 100%;
+	margin-top: 3%;
 }
 
 #belowHeader h1 {
-	font-size: 40px;
+	font-size: 2.5em;
 	margin-bottom: 30px;
 	color: #2693a0;
 	text-shadow: 1px 1px 1px #085191;
 }
 
 #belowHeader h2 {
-	font-size: 25px;
+	font-size: 1.5em;
 	color: #2693a0;
 	margin: 30px 0px;
 }
@@ -164,23 +167,17 @@ footer {
 }
 
 
-
 #mainContent {
 	position: absolute;
-	left: 250px;
-	top: 200px; 
-	margin: 0px 40px 0px 30px;
-	font-size: 20px;
+	float: right;
+	margin-top: 3%;
+	margin-left: 18%;
+	font-size: 1.25em;
 	/*border: 1px solid #085191;
 	border-radius: 15px;
 	max-height: 400px;
 	box-shadow: 3px 3px 3px navy;  */
 	padding: 0 40px 30px 40px;
-}
-
-#header-text {
-	
-
 }
 
 .italic {
@@ -200,107 +197,5 @@ input[type="text"] {
 	font-size: 20px;
 }
 
-
-
-
-
-
-
-
-
-
-
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-.mySlides {
-    display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor:pointer;
-  height: 13px;
-  width: 13px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
 
 
