--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,15 @@ body, input, textarea {
 	font-family: 'Raleway', sans-serif;
 	color: #085191;
 	height: 100%;
+	box-sizing: border-box;
 }
 
 #gladys-pic {
 	border: 2px solid #085191;
 	box-shadow: 1px 3px 5px #085191;
-	margin-right: 4em;
-	margin-bottom: 4em;
+	margin-right: 60px;
+	margin-bottom: 60px;
+	width: 25%;
 }
 
 #contact-links-list {
@@ -34,19 +36,18 @@ body, input, textarea {
 	margin-bottom: 10px;
 }
 
-#contact-form input,
-#contact-form textarea {
-	margin: 5px;
-	border: 1px solid #085191;
-	color: #085191;
-	padding: 5px;
-}
-
 #contact-form {
 	border: 1px solid #42bbc9;
 	box-shadow: 1px 3px 5px #085191;
 	width: 80%;
-	padding: 20px;
+	padding: 30px;
+}
+
+#contact-form input,
+#contact-form textarea {
+	border: 1px solid #085191;
+	color: #085191;
+	margin-top: 10px;
 }
 
 #btn-contact-form {
@@ -66,10 +67,20 @@ body, input, textarea {
 	color: #fff;
 }
 
+#btn-contact-form:active{
+	background-color: #085191;
+	border: 1px solid #000000;
+	color: #fff;
+	box-shadow: 0px 2px #3c5b77;
+	transform: translateY(1px);
+}
+
 #msg-contact-form {
 	width: 100%;
 	height: 100px;
+	resize: vertical;
 }
+
 
 a:link {
 	color: #42bbc9;
@@ -110,7 +121,7 @@ a:visited {
 	background-color: #fff; */
 	background-color: #42bbc9;
 	color: #fff;
-	font-size: 5vw;
+	font-size: 3em;
 	padding: 25px 25px;
 	text-align: left;
 	/* border: 1px solid #085191;
@@ -158,18 +169,18 @@ footer {
 
 
 #mainContent {
-	height: 65%;
 	width: 72%;
 	position: absolute;
 	float: right;
 	margin-left: 20%;
-	margin-top: 3%;
+	margin-top: 2%;
+	margin-bottom: 3%;
 	font-size: 1.25em;
 	/*border: 1px solid #085191;
 	max-height: 400px;
 	border-radius: 30px;
 	box-shadow: 0 0 5px #2693a0; 
-	padding: 0 40px 30px 40px;*/
+	padding: 30px 40px;*/
 }
 
 .italic {
