--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,12 @@ body, input, textarea {
 }
 
 #contact-links-list {
-	list-style: none;
 	margin: 10px;
 	padding: 20px;
 }
 
-#contact-links li {
-	margin-bottom: 10px;
+#contact-links-list td {
+	min-width: 40px;
 }
 
 #contact-form {
@@ -69,7 +68,7 @@ body, input, textarea {
 
 #btn-contact-form:active{
 	background-color: #085191;
-	border: 1px solid #000000;
+	border: 1px solid black;
 	color: #fff;
 	box-shadow: 0px 2px #3c5b77;
 	transform: translateY(1px);
@@ -90,9 +89,10 @@ a:hover {
 	color: #085191;
 }
 
-a:visited {
-	color: #6d6df9;
+a:active {
+	color: black;
 }
+
 
 #menu {
 	width: 25%;
