--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,34 @@
 	background: transparent;
 }
 
+a:link {
+	color: #42bbc9;
+}
+
+a:hover {
+	color: #085191;
+}
+
+a:active {
+	color: black;
+}
+
+.italic {
+    -moz-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+	
+	-webkit-transform: skewX(-10deg);
+    -moz-transform: skewX(-10deg);
+    -o-transform: skewX(-10deg);
+    transform: skewX(-10deg);
+}
+
+input[type="text"] {
+	font-size: 20px;
+}
+
 body, input, textarea {
     overflow: scroll;
 	background-color: #f9fdff;	
@@ -18,12 +46,49 @@ body, input, textarea {
 	box-sizing: border-box;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: 17% auto;
+    grid-template-rows: 10% auto;
+}
+
+/* #main-content styling */
+
+#main-content {
+    margin: 5% 2%;
+	font-size: 1.25em;
+	/*border: 1px solid #085191;
+	max-height: 400px;
+	border-radius: 30px;
+	box-shadow: 0 0 5px #2693a0; 
+	padding: 30px 40px;*/
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+}
+
+#main-content h1 {
+    font-size: 2.5em;
+	margin-bottom: 30px;
+	color: #2693a0;
+	text-shadow: 1px 1px 1px #085191;
+}
+
+#main-content h2 {
+	font-size: 1.5em;
+	color: #2693a0;
+	margin: 30px 0px;
+}
+
 #gladys-pic {
 	border: 2px solid #085191;
 	box-shadow: 1px 3px 5px #085191;
 	margin-right: 60px;
 	margin-bottom: 60px;
 	width: 25%;
+}
+
+.projectList li {
+	margin: 10px 0px 10px 50px;
 }
 
 #contact-links-list {
@@ -99,19 +164,6 @@ body, input, textarea {
 	resize: vertical;
 }
 
-
-a:link {
-	color: #42bbc9;
-}
-
-a:hover {
-	color: #085191;
-}
-
-a:active {
-	color: black;
-}
-
 .overlay {
     background: gray;
     position: absolute;
@@ -123,8 +175,11 @@ a:active {
     display: none;
 }
 
+/* button menu styling */
+
 #menu {
-	width: 18%;
+    margin: 10% 0%;
+	grid-row: 2 / 3;
 }
 
 .menuBtn {
@@ -143,13 +198,15 @@ a:active {
 	box-shadow: 1px 4px 10px #085191;
 }
 
-#menu_mobile_btn {
+#menu-mobile-btn {
     font-size: 4em;
     margin: 15%;
     color: #085191;
 }
 
-#header, footer {
+/* header styling */
+
+#header {
 	position: relative;
 	/* margin: 30px;
 	background-color: #fff; */
@@ -163,79 +220,7 @@ a:active {
 	box-shadow: 0px 4px 10px #085191;
 	letter-spacing: 1px;
 	text-shadow: 2px 2px 5px #085191;
-	
-}
-
-
-footer {
-	clear: both;
-	position: absolute;
-	bottom: 0;
-	height: 60px;
-	min-height: 100%;
-}
-
-
-#belowHeader {
-	border: 0px;
-	width: 100%;
-	height: 100%;
-	margin-top: 3%;
-}
-
-#belowHeader h1 {
-	font-size: 2.5em;
-	margin-bottom: 30px;
-	color: #2693a0;
-	text-shadow: 1px 1px 1px #085191;
-}
-
-#belowHeader h2 {
-	font-size: 1.5em;
-	color: #2693a0;
-	margin: 30px 0px;
-}
-
-#belowHeader tr {
-	padding: 0px;
-}
-
-
-.projectList li {
-	margin: 10px 0px 10px 50px;
-}
-
-
-#mainContent {
-	width: 75%;
-	position: absolute;
-	float: right;
-	margin-left: 2%;
-	margin-top: 2%;
-	margin-bottom: 3%;
-	font-size: 1.25em;
-	/*border: 1px solid #085191;
-	max-height: 400px;
-	border-radius: 30px;
-	box-shadow: 0 0 5px #2693a0; 
-	padding: 30px 40px;*/
-}
-
-.italic {
-    -moz-transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
-	
-	-webkit-transform: skewX(-10deg);
-    -moz-transform: skewX(-10deg);
-    -o-transform: skewX(-10deg);
-    transform: skewX(-10deg);
-}
-
-
-input[type="text"] {
-	font-size: 20px;
+	grid-column: 1 / 3;
 }
 
 
