--- a/styles.css
+++ b/styles.css
@@ -44,12 +44,13 @@ body, input, textarea {
 	color: #085191;
 	height: 100%;
 	box-sizing: border-box;
+	z-index: 1;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: 17% auto;
-    grid-template-rows: 10% auto;
+    grid-template-columns: 20fr 100fr;
+	grid-template-rows: minmax(2fr, 10fr) 100fr;
 }
 
 /* #main-content styling */
@@ -165,14 +166,12 @@ body, input, textarea {
 }
 
 .overlay {
+	display: none;
+    grid-column: 1 / 3;
+	grid-row: 1 / 3;
     background: gray;
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    opacity: 0.5;
-    display: none;
+    opacity: 0.7;
+	z-index: 2;
 }
 
 /* button menu styling */
@@ -180,6 +179,8 @@ body, input, textarea {
 #menu {
     margin: 10% 0%;
 	grid-row: 2 / 3;
+	grid-column: 1 / 2;
+	z-index: 3;
 }
 
 .menuBtn {
@@ -199,15 +200,15 @@ body, input, textarea {
 }
 
 #menu-mobile-btn {
+	display: none;
     font-size: 4em;
     margin: 15%;
-    color: #085191;
+	color: #085191;
 }
 
 /* header styling */
 
 #header {
-	position: relative;
 	/* margin: 30px;
 	background-color: #fff; */
 	background-color: #42bbc9;
@@ -220,6 +221,7 @@ body, input, textarea {
 	box-shadow: 0px 4px 10px #085191;
 	letter-spacing: 1px;
 	text-shadow: 2px 2px 5px #085191;
+	grid-row: 1 / 2;
 	grid-column: 1 / 3;
 }
 
