--- a/stylesheets/main_styles.css
+++ b/stylesheets/main_styles.css
@@ -214,7 +214,7 @@ body, input, textarea {
 	background-color: #42bbc9;
 	color: #fff;
 	font-size: 3em;
-	padding: 25px 25px;
+	padding: 2% 2%;
 	text-align: left;
 	/* border: 1px solid #085191;
 	border-radius: 15px; */
